# local-file-transfer

./: .gitignore  404.html  Cargo.toml  README.md
.github/workflows/: rust-server.yml  web-interface.yml
file-transfer/: .gitignore  Cargo.toml  index.html
file-transfer-server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
file-transfer-server/src/: server.rs
file-transfer-server/src/server/: custom_file.rs  request_services.rs
file-transfer-server/src/server/request_services/: custom_ip_utils.rs  request_processes.rs
file-transfer/rust/: .gitignore  404.html  Cargo.toml  index.html
file-transfer/rust/src/: main.rs  server.rs
file-transfer/rust/src/server/: process_http_request.rs  request_services.rs
file-transfer/rust/src/server/process_http_request/: process_file.rs
file-transfer/src/: main.rs  server.rs  socket_server.rs
file-transfer/src/server/: custom_thread.rs  process_http_request.rs
file-transfer/src/server/custom_ip_utils/: custom_ip_utils.rs
file-transfer/src/server/process_http_request/: process_file.rs
file-transfer/src/server/request_services/: custom_ip_utils.rs
react-interface/: package-lock.json  package.json
react-interface/src/: App.tsx
react-interface/src/components/: device-list.tsx  file-list.tsx  file-receiver.tsx
react-interface/src/components/custom-components/: extendable-container.tsx
react-interface/src/services/: http-requests.ts
src/: custom_ip_utils.rs  lib.rs  main.rs  server.rs  todo_later.md
src/components/: device_list.rs  file_list.rs
src/models/: device.rs  file.rs
src/stores/: device_store.rs  notification_store.rs
web/: .gitignore  LICENSE-MIT  README.md  index.html
web-interface/: Cargo.toml  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-interface/src/: App.tsx  index.css  lib.rs  main.rs  main.tsx
web-interface/src/components/: device-list.tsx  device_list.rs  file-list.tsx  file-receiver.tsx  file-sender.tsx  file_list.rs  mod.rs  settings.tsx
web-interface/src/hooks/: fetchFilesHook.ts
web-interface/src/interfaces/: file.ts  props.ts  settings.ts
web-interface/src/models/: device.rs  file.rs
web-interface/src/services/: apiRequests.ts  fileManagement.ts  formatting.ts  http-requests.ts  localStorage.ts
web-interface/src/stores/: file_store.rs  mod.rs
web-interface/src/styles/: dark-mode.css  default.css  index.css  mobile.css
web/src/: main.rs
web/src/models/: device.rs  file.rs  mod.rs
(+11 files in other folders)
