[package]
name = "file_sharing_through_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ipnetwork = "0.20.0"
socket2 = "0.5.3"

[lib]
name = "ip_utils"
path = "src/custom_ip_utils.rs"
