[package]
name = "file_sharing_through_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-web = "4.4.0"
chrono = "0.4.28"
dotenv = "0.15.0"
fs = "0.0.5"
futures = "0.3.28"
futures-util = "0.3.28"
http-body-util = "0.1.0-rc.3"
ipnetwork = "0.20.0"
mime = "0.3.17"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
socket2 = "0.5.3"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"
