[package]
name = "file_sharing_through_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
http-body-util = "0.1.0-rc.3"
hyper = { version = "0.14.27", features = ["full"] }
ipnetwork = "0.20.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
socket2 = "0.5.3"
tokio = { version = "1.32.0", features = ["full"] }
